ini files updated with secthresh

--- a/fpp/fppmodels/201828749.1/fpp.ini
+++ b/fpp/fppmodels/201828749.1/fpp.ini
@@ -18,4 +18,5 @@ W3 = 9.982, 0.174
 Kepler = 11.6926
 [constraints]
 maxrad = 16.0
+secthresh = 0.000391436989739
 ccfiles = PHARO_H.cc, PHARO_J.cc, PHARO_K.cc, SDSS_r.cc
